edited lbdds visual.html.erb

--- a/app/views/lbdds/visual.html.erb
+++ b/app/views/lbdds/visual.html.erb
@@ -126,7 +126,7 @@
 		<% else %>
 			<table class="table table-striped">
 				<h4>My Reservation</h4>
-					<% if @my_lbddbs.empty? %>
+					<% if @my_lbdds.empty? %>
 						<p>You have no reservation for this section</p>
 					<% else %>
 					<% @my_lbddbs.each do |my| %>
