--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,7 @@
           <a class="brand" href="<%= root_path %>">PeopleSparx</a>
           <div class="nav-collapse">
             <ul class="nav">           
-              <li><%= link_to 'Home', root_path %></li>
-              <li><%= link_to 'Home', root_path %></li>
-              <li><%= link_to 'Home', root_path %></li>
-          	  <li><%= link_to 'Home', root_path %></li>
+              <!-- nav -->
             </ul>
           </div><!--/.nav-collapse -->
           <% if session[:username] %>
