--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="<%= root_path %>">PeopleSparx</a>
+          <%= link_to 'PeopleSparx', {:controller => 'access', :action => 'public'}, :class => 'brand' %>
           <div class="nav-collapse">
-            <ul class="nav">           
+            <ul class="nav">
+              <% if session[:username] == 'admin' %>
+                <li><%= link_to 'Users', :controller => 'Users' %></li>
+              <% else %>
+                <li><%= link_to 'My Reservations', {:controller => 'company', :action => 'show_comp', :id => session[:id]} %></li>
+              <% end %>           
               <!-- nav -->
             </ul>
           </div><!--/.nav-collapse -->
