--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <br/><br/><br/>
 <div class="container">
 
-<h1>Users</h1>
+<h1>Users (<%= @users.size %>)</h1>
 <br/>
 <table  class="table table-striped">
   <tr>
@@ -9,20 +9,19 @@
     <th>Company</th>
     <th>Contact</th>
     <th>Email</th>
+    <th>Reservations</th>  
     <th></th>
-    <th></th>
-    <th></th>
+    
   </tr>
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.username %></td>
+    <td><%= link_to user.username, {:controller => 'company', :action => 'show_comp', :id => user.id} %></td>
     <td><%= user.company_name %></td>
     <td><%= user.company_contact %></td>
     <td><%= user.company_email %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
+    <td></td>
+    <td><%= link_to 'Edit', edit_user_path(user) %></td>  
   </tr>
 <% end %>
 </table>
