--- a/app/views/company/show_comp.html.erb
+++ b/app/views/company/show_comp.html.erb
@@ -36,5 +36,5 @@
 </div>
 
 <%= link_to 'Submit Email', {:action => 'send_reserve', :id => @user.id}, :class => 'btn btn-primary' %>
-<%= link_to 'Back', {:action => 'visual'}, :class => 'btn btn-primary' %>
+<%= link_to 'Back', :back, :class => 'btn btn-primary' %>
 </div>
