--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Reservation</title>
+  <title>HRCC ICONS Reservation</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -22,6 +22,8 @@
             <ul class="nav">
               <% if session[:username] == 'admin' %>
                 <li><%= link_to 'Users', :controller => 'Users' %></li>
+              <% elsif session[:username] == nil %>
+                <li></li>
               <% else %>
                 <li><%= link_to 'My Reservations', {:controller => 'company', :action => 'show_comp', :id => session[:id]} %></li>
               <% end %>           
