--- a/app/views/lbdds/_form.html.erb
+++ b/app/views/lbdds/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@lbdd) do |f| %>
   <% if @lbdd.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@lbdd.errors.count, "error") %> prohibited this lbdd from being saved:</h2>
+      <h2><%= pluralize(@vipbbsrsbb.errors.count, "error") %> prohibited this vipbbsrsbb from being saved:</h2>
 
       <ul>
       <% @lbdd.errors.full_messages.each do |msg| %>
@@ -16,6 +16,10 @@
     <%= f.text_field :ticket_num %>
   </div>
   <div class="field">
+    <%= f.label :section %><br />
+    <%= f.text_field :section %>
+  </div>
+  <div class="field">
     <%= f.label :company_name %><br />
     <%= f.text_field :company_name %>
   </div>
@@ -24,18 +28,16 @@
     <%= f.text_field :company_contact %>
   </div>
   <div class="field">
-    <%= f.hidden_field :flag, :value => 0 %>
-    <%= f.hidden_field :status, :value => false %>
-    <%= f.hidden_field :price, :value => 00 %>
-    <%= f.hidden_field :approved, :value => 'false' %>
-    <%= f.hidden_field :paid, :value => 'no' %>
-    <%= f.hidden_field :main_section, :value => 'lb_dd' %>
+    <%= f.label :company_email %><br />
+    <%= f.text_field :company_email %>
   </div>
   <div class="field">
-    <%= f.label :section %><br />
-    <%= f.text_field :section %>
+    <%= f.hidden_field :flag, :value => 0 %>
+    <%= f.hidden_field :status, :value => false %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit('Create Seat') %>
   </div>
 <% end %>
+<!--options_for_select([ "false", "true" ])-->
