--- a/app/views/lbdds/index.html.erb
+++ b/app/views/lbdds/index.html.erb
@@ -67,7 +67,7 @@
       
         <%= f.label :section %>
         <%= f.text_field :section %>
-        <%= f.hidden_field :status, :value => false %>
+        <%= f.hidden_field :status, :value => 'false' %>
         <%= f.hidden_field :approved, :value => 'no' %>
         <%= f.hidden_field :paid, :value => 'no' %>
       </div>
