finished the sections

--- a/app/views/access/public.html.erb
+++ b/app/views/access/public.html.erb
@@ -15,10 +15,10 @@
 		<p><%= link_to('LB-CC',{:controller => 'Lbccs',:action => 'visual'}) %> - <b><u><%= @lbccs.size %></u></b> / <%= @lbccs_all.size %> total seats</p>
 		<p><%= link_to('LB-BB',{:controller => 'Lbbbs',:action => 'visual'}) %> - <b><u><%= @lbbbs.size %></u></b> / <%= @lbbbs_all.size %> total seats</p>
 		<p><%= link_to('LB-AA',{:controller => 'Lbaas',:action => 'visual'}) %> - <b><u><%= @lbaas.size %></u></b> / <%= @lbaas_all.size %> total seats</p>
-		<p><%= link_to('LB-A',{:controller => 'Lbas',:action => 'visual'}) %></p>
-		<p><%= link_to('LB-B',{:controller => 'Vipbbsrsbbs',:action => 'visual'}) %></p>
-		<p><%= link_to('LB-C',{:controller => 'Vipbbsrsbbs',:action => 'visual'}) %></p>
-		<p><%= link_to('LB-D',{:controller => 'Vipbbsrsbbs',:action => 'visual'}) %></p>
+		<p><%= link_to('LB-A',{:controller => 'Lbas',:action => 'visual'}) %> - <b><u><%= @lbas.size %></u></b> / <%= @lbas_all.size %> total seats</p>
+		<p><%= link_to('LB-B',{:controller => 'Lbbs',:action => 'visual'}) %> - <b><u><%= @lbbs.size %></u></b> / <%= @lbbs_all.size %> total seats</p>
+		<p><%= link_to('LB-C',{:controller => 'Lbcs',:action => 'visual'}) %> - <b><u><%= @lbcs.size %></u></b> / <%= @lbcs_all.size %> total seats</p>
+		<p><%= link_to('LB-D',{:controller => 'Lbds',:action => 'visual'}) %> - <b><u><%= @lbds.size %></u></b> / <%= @lbds_all.size %> total seats</p>
 	</ul>
 </div>
 </div>
