--- a/app/views/lbas/update_status.js.erb
+++ b/app/views/lbas/update_status.js.erb
@@ -1,4 +1,4 @@
 $(function(){
-     $("#<%= dom_id(@lbaa) %>").toggleClass('true'); 
+     $("#<%= dom_id(@lba) %>").toggleClass('true'); 
      location.reload();     
 });
