--- a/app/views/vipbbsrsbbs/_form.html.erb
+++ b/app/views/vipbbsrsbbs/_form.html.erb
@@ -35,6 +35,7 @@
   <div class="field">
     <%= f.hidden_field :flag, :value => 0 %>
     <%= f.hidden_field :paid, :value => 'no' %>
+    <%= f.hidden_field :approved, :value => 'no' %>
   </div>
 
   <div class="actions">
