--- a/app/views/vipbbsrsbbs/index_c.html.erb
+++ b/app/views/vipbbsrsbbs/index_c.html.erb
@@ -18,7 +18,7 @@
     <th>Email</th>
     <th>Paid</th>
     <th>Approved</th>
-    <% if session[:username] == 'superadmin' %>
+    <% if session[:username] == 'admin' %>
         <th></th>
         <th></th>
         <th></th>
@@ -41,7 +41,7 @@
         <% else %>
             <td><%= image_tag('check.png') %></td>
         <% end %>
-    <% if session[:username] == 'superadmin' %>
+    <% if session[:username] == 'admin' %>
         <td><%= link_to 'Show', vipbbsrsbb %></td>
         <td><%= link_to 'Edit', edit_vipbbsrsbb_path(vipbbsrsbb) %></td>
         <td><%= link_to 'Destroy', vipbbsrsbb, confirm: 'Are you sure?', method: :delete, remote: true %></td>
